force-app/main/default/objects/leankor__ValueStream__c/leankor__ValueStream__c.object-meta.xml
<CustomObject>
    <description>A series of process steps in serial or concurrent order which together creates a value for the end customer. A ValueStream has one or more KanbanCard that move through the process flow.</description>
    <label>Value Stream</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Value Stream Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Value Streams</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>