force-app/main/default/objects/leankor__ValueStream__c/fields/BoardDisplayTag__c.field-meta.xml
<CustomField>
    <fullName>BoardDisplayTag__c</fullName>
    <description>A common tag to be assigned to multiple projects&apos; one specific valuestream</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Board Display Tag</label>
    <length>6</length>
    <type>Text</type>
</CustomField>