force-app/main/default/objects/leankor__ValueStream__c/fields/IsProjectView__c.field-meta.xml
<CustomField>
    <fullName>IsProjectView__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Project View</label>
    <type>Checkbox</type>
</CustomField>