force-app/main/default/objects/leankor__ValueStream__c/fields/leankor__BackgroundHeight__c.field-meta.xml
<CustomField>
    <fullName>leankor__BackgroundHeight__c</fullName>
    <defaultValue>800</defaultValue>
    <description>The background image height (in pixels).</description>
    <inlineHelpText>Enter the background image height (in pixels).</inlineHelpText>
    <label>BackgroundHeight</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>