force-app/main/default/objects/leankor__ValueStream__c/fields/leankor__BackgroundWidth__c.field-meta.xml
<CustomField>
    <fullName>leankor__BackgroundWidth__c</fullName>
    <defaultValue>1200</defaultValue>
    <description>Width of the background image if there is one.</description>
    <inlineHelpText>Enter the width (in pixels) of the background images added to the value stream.</inlineHelpText>
    <label>BackgroundWidth</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>