force-app/main/default/objects/leankor__ValueStream__c/fields/leankor__BoardType__c.field-meta.xml
<CustomField>
    <fullName>leankor__BoardType__c</fullName>
    <description>This is field require to selected Project Board type</description>
    <inlineHelpText>Select type of project board type.</inlineHelpText>
    <label>Board Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Kanban Board</fullName>
                <default>true</default>
                <label>Kanban Board</label>
            </value>
            <value>
                <fullName>Whiteboard</fullName>
            </value>
            <value>
                <fullName>Portfolio View</fullName>
            </value>
            <value>
                <fullName>Card Hierarchy</fullName>
            </value>
            <value>
                <fullName>Plan Board</fullName>
            </value>
            <value>
                <fullName>DashBoard</fullName>
            </value>
            <value>
                <fullName>UberBoard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>