force-app/main/default/objects/leankor__ValueStream__c/fields/leankor__CardsRequireFilterConfirmation__c.field-meta.xml
<CustomField>
    <fullName>leankor__CardsRequireFilterConfirmation__c</fullName>
    <description>Number of cards on the board which requires confirmation (enter key) on filter feature.</description>
    <label>Cards to require filter confirmation</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>