force-app/main/default/objects/leankor__ValueStream__c/fields/leankor__CaseCardCategory__c.field-meta.xml
<CustomField>
    <fullName>leankor__CaseCardCategory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Kanban Card Template for Cases</description>
    <inlineHelpText>Kanban Card Template for Cases</inlineHelpText>
    <label>Case Card Category</label>
    <referenceTo>leankor__KanbanCardTemplate__c</referenceTo>
    <relationshipLabel>Value Streams</relationshipLabel>
    <relationshipName>Value_Streams</relationshipName>
    <type>Lookup</type>
</CustomField>