force-app/main/default/objects/leankor__ValueStream__c/fields/leankor__CaseRecordType__c.field-meta.xml
<CustomField>
    <fullName>leankor__CaseRecordType__c</fullName>
    <description>This field contains Record type values of Case.</description>
    <inlineHelpText>This field contains Record type values of Case.</inlineHelpText>
    <label>Case Record Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>