force-app/main/default/objects/leankor__ValueStream__c/fields/leankor__CaseSynchronization__c.field-meta.xml
<CustomField>
    <fullName>leankor__CaseSynchronization__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field shows whether Case of Value Stream is Synchronized or NOT.</description>
    <inlineHelpText>This field shows whether Case of Value Stream is Synchronized or NOT.</inlineHelpText>
    <label>Case Synchronization</label>
    <type>Checkbox</type>
</CustomField>