force-app/main/default/objects/leankor__ValueStream__c/fields/leankor__CaseType__c.field-meta.xml
<CustomField>
    <fullName>leankor__CaseType__c</fullName>
    <description>This field show types of Cases that belongs to KanbanCard.</description>
    <inlineHelpText>This field show types of Cases that belongs to KanbanCard.</inlineHelpText>
    <label>Case Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>