force-app/main/default/objects/leankor__ValueStream__c/fields/leankor__DaysPerSprint__c.field-meta.xml
<CustomField>
    <fullName>leankor__DaysPerSprint__c</fullName>
    <description>This field contain total days for per sprint.</description>
    <inlineHelpText>This field contain total days for per sprint.</inlineHelpText>
    <label>Days Per Sprint</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>