force-app/main/default/objects/leankor__ValueStream__c/fields/leankor__DefaultCategory__c.field-meta.xml
<CustomField>
    <fullName>leankor__DefaultCategory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field Is use to set Default Category on cards which will create from Inbound Emails.</description>
    <label>Inbound Email Default Category</label>
    <referenceTo>leankor__KanbanCardTemplate__c</referenceTo>
    <relationshipLabel>Value Streams (Default Category on Inbound Email)</relationshipLabel>
    <relationshipName>ValueStreams</relationshipName>
    <type>Lookup</type>
</CustomField>