force-app/main/default/objects/leankor__ValueStream__c/fields/leankor__DefaultOwnerID__c.field-meta.xml
<CustomField>
    <fullName>leankor__DefaultOwnerID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field Is use to set default Owner Id On cards which will create from Inbound Emails.</description>
    <inlineHelpText>This field Is use to set default Owner Id On cards which will create from Inbound Emails.</inlineHelpText>
    <label>Inbound Email Card Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ValueStreams</relationshipName>
    <type>Lookup</type>
</CustomField>