force-app/main/default/objects/leankor__ValueStream__c/fields/leankor__DisableCalendarView__c.field-meta.xml
<CustomField>
    <fullName>leankor__DisableCalendarView__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field can Disable Calendar View logo from Board View.</description>
    <inlineHelpText>This field can Disable Calendar View logo from Board View.</inlineHelpText>
    <label>Disable Calendar View</label>
    <type>Checkbox</type>
</CustomField>