force-app/main/default/objects/leankor__ValueStream__c/fields/leankor__DisableTaskAsMiniature__c.field-meta.xml
<CustomField>
    <fullName>leankor__DisableTaskAsMiniature__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set this to FALSE if you want to show tasks as miniatures of a card on Calendar View.</description>
    <label>DisableTaskAsMiniature</label>
    <type>Checkbox</type>
</CustomField>