force-app/main/default/objects/leankor__ValueStream__c/fields/leankor__Effortindicator__c.field-meta.xml
<CustomField>
    <fullName>leankor__Effortindicator__c</fullName>
    <description>This pick list is used to show effort format of card.</description>
    <inlineHelpText>This pick list is used to show effort format of card.</inlineHelpText>
    <label>Effort Indicator</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Days</fullName>
                <default>true</default>
                <label>Days</label>
            </value>
            <value>
                <fullName>Hours</fullName>
            </value>
            <value>
                <fullName>Points</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>