force-app/main/default/objects/leankor__ValueStream__c/fields/leankor__IsAgile__c.field-meta.xml
<CustomField>
    <fullName>leankor__IsAgile__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field contains true/false value for agile mode.</description>
    <inlineHelpText>This field contains true/false value for agile mode.</inlineHelpText>
    <label>IsAgile</label>
    <type>Checkbox</type>
</CustomField>