force-app/main/default/objects/leankor__ValueStream__c/fields/leankor__Isrecalculate__c.field-meta.xml
<CustomField>
    <fullName>leankor__Isrecalculate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>this field contains ture if board  will clone first time.</description>
    <label>Isrecalculate</label>
    <type>Checkbox</type>
</CustomField>