force-app/main/default/objects/leankor__ValueStream__c/fields/leankor__isRecordDeleted__c.field-meta.xml
<CustomField>
    <fullName>leankor__isRecordDeleted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>soft deleted record</description>
    <label>isRecordDeleted</label>
    <type>Checkbox</type>
</CustomField>