force-app/main/default/objects/leankor__ValueStream__c/fields/leankor__IsScheduleRecalculate__c.field-meta.xml
<CustomField>
    <fullName>leankor__IsScheduleRecalculate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the schedule of the board will be adjusted due to a change in project blackout schedule or not.</description>
    <label>Is Schedule Recalculate</label>
    <type>Checkbox</type>
</CustomField>