force-app/main/default/objects/leankor__ValueStream__c/fields/leankor__IsShowCategoryColor__c.field-meta.xml
<CustomField>
    <fullName>leankor__IsShowCategoryColor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set this to TRUE if you want to show category color for work completions on Gantt.</description>
    <label>Show Category Color</label>
    <type>Checkbox</type>
</CustomField>