force-app/main/default/objects/leankor__ValueStream__c/fields/leankor__IsTemplateBoard__c.field-meta.xml
<CustomField>
    <fullName>leankor__IsTemplateBoard__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true then board will use for template so No hyperjump will allowed.</description>
    <inlineHelpText>If true then board will use for template so No hyperjump will allowed.</inlineHelpText>
    <label>Is Template Board?</label>
    <type>Checkbox</type>
</CustomField>