force-app/main/default/objects/leankor__ValueStream__c/fields/leankor__JSONSnapshot__c.field-meta.xml
<CustomField>
    <fullName>leankor__JSONSnapshot__c</fullName>
    <description>This is the saved position and meta-data for kanban cards on the value stream.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This text is not to be changed unless you know the core internals of how value streams parse and use JSON data.</inlineHelpText>
    <label>JSON Snapshot</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>