force-app/main/default/objects/leankor__ValueStream__c/fields/leankor__KanbanCardCount__c.field-meta.xml
<CustomField>
    <fullName>leankor__KanbanCardCount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The number of kanban cards currently active in this value stream.</description>
    <inlineHelpText>The number of kanban cards currently active in this value stream.</inlineHelpText>
    <label>Kanban Card Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>