force-app/main/default/objects/leankor__ValueStream__c/fields/leankor__KanbanCardThroughput__c.field-meta.xml
<CustomField>
    <fullName>leankor__KanbanCardThroughput__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The number of kanban cards that pass through this value stream in a 24-hr period. &quot;Pass through&quot; is defined as entering into a zone and then at some point &quot;hyper-jumping&quot; to another value stream.</description>
    <inlineHelpText>The number of kanban cards that pass through this value stream in a 24-hr period. &quot;Pass through&quot; is defined as entering into a zone and then at some point &quot;hyper-jumping&quot; to another value stream.</inlineHelpText>
    <label>Kanban Card Throughput</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>