force-app/main/default/objects/leankor__ValueStream__c/fields/leankor__LastModifiedDateTime__c.field-meta.xml
<CustomField>
    <fullName>leankor__LastModifiedDateTime__c</fullName>
    <description>This field is use to store when edit board is last modified date and time .</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This field is use to store when edit board is last modified date and time .</inlineHelpText>
    <label>Last Modified Date Time</label>
    <type>DateTime</type>
</CustomField>