force-app/main/default/objects/leankor__ValueStream__c/fields/leankor__LastModifiedUserID__c.field-meta.xml
<CustomField>
    <fullName>leankor__LastModifiedUserID__c</fullName>
    <description>This field is used to store the records on last modified User ID on Edit Board.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This field is used to store the records on last modified User ID on Edit Board.</inlineHelpText>
    <label>Last Modified UserID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>