force-app/main/default/objects/leankor__ValueStream__c/fields/leankor__ManuallyScheduled__c.field-meta.xml
<CustomField>
    <fullName>leankor__ManuallyScheduled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Activity Manually Scheduled</label>
    <type>Checkbox</type>
</CustomField>