force-app/main/default/objects/leankor__ValueStream__c/fields/leankor__OpportunityCardCategory__c.field-meta.xml
<CustomField>
    <fullName>leankor__OpportunityCardCategory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field shows Card template on KanbanCard while creating Opportunity.</description>
    <inlineHelpText>This field shows Card template on KanbanCard while creating Opportunity.</inlineHelpText>
    <label>Opportunity Card Category</label>
    <referenceTo>leankor__KanbanCardTemplate__c</referenceTo>
    <relationshipLabel>Value Streams (Opportunity Card Category)</relationshipLabel>
    <relationshipName>Value_Streams1</relationshipName>
    <type>Lookup</type>
</CustomField>