force-app/main/default/objects/leankor__ValueStream__c/fields/leankor__OpportunityLeadSource__c.field-meta.xml
<CustomField>
    <fullName>leankor__OpportunityLeadSource__c</fullName>
    <description>This field contains lead source for creating an Opportunity.</description>
    <inlineHelpText>This field contains lead source for creating an Opportunity.</inlineHelpText>
    <label>OpportunityLeadSource</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>