force-app/main/default/objects/leankor__ValueStream__c/fields/leankor__OpportunityRecordType__c.field-meta.xml
<CustomField>
    <fullName>leankor__OpportunityRecordType__c</fullName>
    <description>This field contains category of records in Opportunity.</description>
    <inlineHelpText>This field contains category of records in Opportunity.</inlineHelpText>
    <label>Opportunity Record Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>