force-app/main/default/objects/leankor__ValueStream__c/fields/leankor__OpportunityRoleId__c.field-meta.xml
<CustomField>
    <fullName>leankor__OpportunityRoleId__c</fullName>
    <description>This field contains Role ID of Opportunity record user.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This field contains Role ID of Opportunity record user.</inlineHelpText>
    <label>OpportunityRoleId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>