force-app/main/default/objects/leankor__ValueStream__c/fields/leankor__OpportunityRoleName__c.field-meta.xml
<CustomField>
    <fullName>leankor__OpportunityRoleName__c</fullName>
    <description>This field contains Role name of Opportunity User.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This field contains Role name of Opportunity User.</inlineHelpText>
    <label>Opportunity Role Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>