force-app/main/default/objects/leankor__ValueStream__c/fields/leankor__OpportunitySynchronization__c.field-meta.xml
<CustomField>
    <fullName>leankor__OpportunitySynchronization__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field shows whether Opportunity is Synchronized or NOT.</description>
    <inlineHelpText>This field shows whether Opportunity is Synchronized or NOT.</inlineHelpText>
    <label>Opportunity Synchronization</label>
    <type>Checkbox</type>
</CustomField>