force-app/main/default/objects/leankor__ValueStream__c/fields/leankor__OpportunityType__c.field-meta.xml
<CustomField>
    <fullName>leankor__OpportunityType__c</fullName>
    <description>This field shows Type of Opportunity user is receiving.</description>
    <inlineHelpText>This field shows Type of Opportunity user is receiving.</inlineHelpText>
    <label>Opportunity Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>