force-app/main/default/objects/leankor__ValueStream__c/fields/leankor__PercentComplete__c.field-meta.xml
<CustomField>
    <fullName>leankor__PercentComplete__c</fullName>
    <label>Percent Complete</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>