force-app/main/default/objects/leankor__ValueStream__c/fields/leankor__PointPicklist__c.field-meta.xml
<CustomField>
    <fullName>leankor__PointPicklist__c</fullName>
    <defaultValue>&quot;[]&quot;</defaultValue>
    <description>This field contains sequence of pick list values i.e 1,20,25,30.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This field contains sequence of pick list values i.e 1,20,25,30.</inlineHelpText>
    <label>Point Picklist</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>