force-app/main/default/objects/leankor__ValueStream__c/fields/leankor__Portfolio__c.field-meta.xml
<CustomField>
    <fullName>leankor__Portfolio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If this particular board is of Board Type Program Board, it can be related to a Portfolio. There should only ever be one Valuestream__c with the Board Type &apos;Program Board&apos; related to the same Portfolio.</description>
    <inlineHelpText>Select the Leankor Portfolio to which this Program Board will be directly related.</inlineHelpText>
    <label>Folder</label>
    <referenceTo>leankor__Portfolio__c</referenceTo>
    <relationshipLabel>Program Boards</relationshipLabel>
    <relationshipName>ProgramBoards</relationshipName>
    <type>Lookup</type>
</CustomField>