force-app/main/default/objects/leankor__ValueStream__c/fields/leankor__PortfolioMode__c.field-meta.xml
<CustomField>
    <fullName>leankor__PortfolioMode__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This setting must be added to the Clone API to allow turning on / off.</description>
    <label>Folder Mode</label>
    <type>Checkbox</type>
</CustomField>