force-app/main/default/objects/leankor__ValueStream__c/fields/leankor__ProjectBoardEndDateTime__c.field-meta.xml
<CustomField>
    <fullName>leankor__ProjectBoardEndDateTime__c</fullName>
    <description>Planning mode Project Board End Date Time.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Project Board End Date Time</label>
    <type>DateTime</type>
</CustomField>