force-app/main/default/objects/leankor__ValueStream__c/fields/leankor__ProjectBoardLaunchDateTime__c.field-meta.xml
<CustomField>
    <fullName>leankor__ProjectBoardLaunchDateTime__c</fullName>
    <description>The date and time of the project board launch.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter the date and time of the project board launch.</inlineHelpText>
    <label>Project Board Launch Date</label>
    <type>DateTime</type>
</CustomField>