force-app/main/default/objects/leankor__ValueStream__c/fields/leankor__ProjectBoardStartDateTime__c.field-meta.xml
<CustomField>
    <fullName>leankor__ProjectBoardStartDateTime__c</fullName>
    <description>Planning mode Project Board Start Date Time.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Project Board Start Date Time</label>
    <type>DateTime</type>
</CustomField>