force-app/main/default/objects/leankor__ValueStream__c/fields/leankor__ProjectRoom__c.field-meta.xml
<CustomField>
    <fullName>leankor__ProjectRoom__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A virtual room which contains one or more value streams (kanban boards).</description>
    <inlineHelpText>Select a project room that this value stream should live in. This helps organize your key processes.</inlineHelpText>
    <label>Project</label>
    <referenceTo>leankor__ProjectRoom__c</referenceTo>
    <relationshipLabel>Value Streams</relationshipLabel>
    <relationshipName>ValueStreams</relationshipName>
    <type>Lookup</type>
</CustomField>