force-app/main/default/objects/leankor__ValueStream__c/fields/leankor__ProjectRoomLink__c.field-meta.xml
<CustomField>
    <fullName>leankor__ProjectRoomLink__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field contains the reference to project.</description>
    <inlineHelpText>This field contains the reference to project.</inlineHelpText>
    <label>Project Link</label>
    <referenceTo>leankor__ProjectRoom__c</referenceTo>
    <relationshipLabel>Value Streams (Link Room Name)</relationshipLabel>
    <relationshipName>Value_Streams</relationshipName>
    <type>Lookup</type>
</CustomField>