force-app/main/default/objects/leankor__ValueStream__c/fields/leankor__ScheduleBackward__c.field-meta.xml
<CustomField>
    <fullName>leankor__ScheduleBackward__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Planning mode Schedule Backward.</description>
    <label>Schedule Backward</label>
    <type>Checkbox</type>
</CustomField>