force-app/main/default/objects/leankor__ValueStream__c/fields/leankor__SevenDayWorkWeek__c.field-meta.xml
<CustomField>
    <fullName>leankor__SevenDayWorkWeek__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For Org will work for Seven day Week make it checked and for Five Day Week make it unchecked.</description>
    <inlineHelpText>For Org will work for Seven day Week make it checked and for Five Day Week make it unchecked.</inlineHelpText>
    <label>Seven Day Work Week</label>
    <type>Checkbox</type>
</CustomField>