force-app/main/default/objects/leankor__ValueStream__c/fields/leankor__SprintStartDate__c.field-meta.xml
<CustomField>
    <fullName>leankor__SprintStartDate__c</fullName>
    <description>This field contains Sprint start date and use for agile mode feature.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This field contains Sprint start date and use for agile mode feature.</inlineHelpText>
    <label>Sprint Start Date</label>
    <type>DateTime</type>
</CustomField>