force-app/main/default/objects/leankor__ValueStream__c/fields/leankor__TaskDateCheck__c.field-meta.xml
<CustomField>
    <fullName>leankor__TaskDateCheck__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field is used to check the task due date logic (if true then task is forced to be created between the card start date and due date and if value is false then the task can be created in any date).</description>
    <inlineHelpText>This field is used to check the task due date logic (if true then task is forced to be created between the card start date and due date and if value is false then the task can be created in any date).</inlineHelpText>
    <label>Task Due Date Check</label>
    <type>Checkbox</type>
</CustomField>