force-app/main/default/objects/leankor__ValueStream__c/fields/leankor__TaskIndicator__c.field-meta.xml
<CustomField>
    <fullName>leankor__TaskIndicator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Task indicator shows incomplete tasks when check box is checked.</description>
    <inlineHelpText>Task indicator shows incomplete tasks when check box is checked.</inlineHelpText>
    <label>Task Indicator</label>
    <type>Checkbox</type>
</CustomField>