force-app/main/default/objects/leankor__ValueStream__c/fields/leankor__UrlLink__c.field-meta.xml
<CustomField>
    <fullName>leankor__UrlLink__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>UrlLink</label>
    <type>Url</type>
</CustomField>