force-app/main/default/objects/leankor__ValueStream__c/fields/leankor__ValueStreamCardLink__c.field-meta.xml
<CustomField>
    <fullName>leankor__ValueStreamCardLink__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field contains Card ID of which record is linked with the Card.</description>
    <inlineHelpText>This field contains Card ID of which record is linked with the Card.</inlineHelpText>
    <label>Value Stream Card Link</label>
    <referenceTo>leankor__KanbanCard__c</referenceTo>
    <relationshipLabel>Value Streams</relationshipLabel>
    <relationshipName>Value_Streams</relationshipName>
    <type>Lookup</type>
</CustomField>