force-app/main/default/objects/leankor__ValueStream__c/fields/leankor__ValueStreamLink__c.field-meta.xml
<CustomField>
    <fullName>leankor__ValueStreamLink__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field contains Board ID in which link Card is presents.</description>
    <inlineHelpText>This field contains Board ID in which link Card is presents.</inlineHelpText>
    <label>Value Stream Link</label>
    <referenceTo>leankor__ValueStream__c</referenceTo>
    <relationshipLabel>Value Streams</relationshipLabel>
    <relationshipName>Value_Streams</relationshipName>
    <type>Lookup</type>
</CustomField>