force-app/main/default/objects/leankor__ValueStream__c/fields/leankor__ValueStreamTemplate__c.field-meta.xml
<CustomField>
    <fullName>leankor__ValueStreamTemplate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A Value Stream may be derived from a template. This field holds that Value Stream Template.</description>
    <inlineHelpText>Select the Value Stream Template which was used to create this Value Stream.</inlineHelpText>
    <label>Value Stream Template</label>
    <referenceTo>leankor__ValueStreamTemplate__c</referenceTo>
    <relationshipName>ValueStreams</relationshipName>
    <type>Lookup</type>
</CustomField>