force-app/main/default/objects/leankor__ValueStream__c/fields/leankor__ViewChatterOptions__c.field-meta.xml
<CustomField>
    <fullName>leankor__ViewChatterOptions__c</fullName>
    <description>This field is used to show chatter i frame of defined object on card.</description>
    <inlineHelpText>This field is used to show chatter i frame of defined object on card.</inlineHelpText>
    <label>View Chatter Options</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Kanban Cards Chatter</fullName>
                <default>true</default>
                <label>Kanban Cards Chatter</label>
            </value>
            <value>
                <fullName>Cases Chatter</fullName>
            </value>
            <value>
                <fullName>Opportunities Chatter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>